Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.9.0
-
None
-
ghx-label-3
Description
uda-test-harness.h doesn't compile with older versions of GCC. This is unhelpful when trying to build Impala UDFs using the native compilers on older OS versions.
In file included from /var/lib/jenkins/workspace/impala-udf-dev-xplatform/label/systest-slave/impala-udf-samples/uda-sample-test.cc:18:0: /usr/include/impala_udf/uda-test-harness.h:47:35: error: ‘virtual impala_udf::UdaTestHarnessBase<RESULT, INTERMEDIATE>::~UdaTestHarnessBase()’ declared virtual cannot be defaulted in the class body /usr/include/impala_udf/uda-test-harness.h:150:31: error: ‘virtual impala_udf::UdaTestHarness<RESULT, INTERMEDIATE, INPUT>::~UdaTestHarness()’ declared virtual cannot be defaulted in the class body