IMPALA-5391: remove C++11 from UDF header

This replaces the C++11 idiom with equivalent C++98 code. The code was
added to address a clang-tidy warning about missing virtual
destructors, which the new code should also address.

Change-Id: Ic10906027e3644e4d42ad20fcd6abda1c24fefa6
Reviewed-on: http://gerrit.cloudera.org:8080/7024
Reviewed-by: Henry Robinson <henry@cloudera.com>
Tested-by: Impala Public Jenkins